--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,5 @@
   <app-acerca-de></app-acerca-de>
   <app-educacion></app-educacion>
   <app-experiencia></app-experiencia>
+  <app-skills></app-skills>
 </div>
