--- a/src/styles.css
+++ b/src/styles.css
@@ -137,3 +137,47 @@
     margin-right: 15px;
 
 }
+
+#skills{
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 4);
+}
+
+#skills-data{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #E2E2E2;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 5px;
+}
+
+.card-title-skills{
+    font-size: 30px;
+    font-family: "Poppins", sans-serif;
+    margin-left: 20px;
+    margin-top: 18px;
+}
+
+
+#word-icon{
+  width: 20px;
+  margin-left: 20px;
+}
+
+.progress-bar{
+    border-radius: 5px;
+}
+
+#skill-title{
+    font-family: "Poppins", sans-serif;
+    width: 60px;
+    margin-left: 30px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
