commit de nueva navbar con funcionalidad

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf="!usuarioLogueado">   <!-- NavBar de Usuario NO-LOGUEADO -->
                                              <!-- BARRA DE NAVEGACION -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -9,11 +9,11 @@
       <form class="d-flex">
                                              <!-- ICONOS Y LOGIN -->
           <div class="mail-icon">
-            <i class="far fa-envelope"></i>
+            <i class="far fa-envelope fa-2x"></i>
           </div>
 
           <div class="wpp-icon">
-            <i class="fab fa-whatsapp"></i>
+            <i class="fab fa-whatsapp fa-2x"></i>
           </div>
           <div class="imput-username">
             <input class="form-control me-2" type="search" placeholder="Username" aria-label="Search">
@@ -23,7 +23,36 @@
           </div>
 
           <div class="login-icon">
-              <button class="btn btn-outline-success" type="submit">Login</button>
+              <button (click)="loguearUsuario()" type="submit"class="btn btn-success">Login</button>
+          </div>
+      </form>
+    </div>
+  </nav>
+</div>
+
+
+<div *ngIf="usuarioLogueado">   <!-- NavBar de Usuario LOGUEADO -->
+                                             <!-- BARRA DE NAVEGACION -->
+<nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="https://i.ibb.co/8dWqNMH/argprog.jpg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
+         Argentina Programa - #YoProgramo
+      </a>
+      <form class="d-flex">
+                                             <!-- ICONOS Y LOGIN -->
+          <div class="mail-icon">
+            <i class="far fa-envelope fa-2x"></i>
+          </div>
+
+          <div class="wpp-icon">
+            <i class="fab fa-whatsapp fa-2x"></i>
+          </div>
+                
+          <h5 id="usuarioBienvenida">¡Bienvenido, Lautaro!</h5>
+          
+          <div class="login-icon">
+            <button (click)="desloguearUsuario()" type="submit"class="btn btn-danger">Logout</button>
           </div>
       </form>
     </div>
