botones edit, plus y social con css

--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,8 +1,15 @@
                                              <!-- EXPERIENCIA -->
 
   <div id="experiencia" class="card border-dark mb-3" style="max-width: 80rem;">
-    <i id="edit" class="fas fa-pencil-alt"></i>
-    <i id="plus" class="fas fa-plus"></i>
+    
+    <div id="exp-edit">
+    <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
+    </div>
+
+    <div id="exp-plus">
+      <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+    </div>
+  
     <div id="exp-text" class="card-body text-dark">
       <h4 class="card-title-education">Experiencia:</h4>
         <div>
