--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,18 +8,24 @@
       </a>
       <form class="d-flex">
                                              <!-- ICONOS Y LOGIN -->
-          <div class="mail-icon">
-            <i class="far fa-envelope fa-2x"></i>
+
+          <div id="mail-icon">
+            <button class="betene btn1 hover"><i class="far fa-envelope"></i></button>
           </div>
 
-          <div class="wpp-icon">
-            <i class="fab fa-whatsapp fa-2x"></i>
+          <div id="linkedin-icon">
+            <button class="betene btn1 hover"><i class="fab fa-linkedin"></i></button>
           </div>
+
+          <div id="wpp-icon">
+            <button class="betene btn1 hover"><i class="fab fa-whatsapp"></i></button>
+          </div>
+
           <div class="imput-username">
-            <input class="form-control me-2" type="search" placeholder="Username" aria-label="Search">
+            <input id="inputUser" class="form-control me-2" type="text" placeholder="Username" aria-label="Search">
           </div>
           <div class="imput-password">
-            <input class="form-control me-2" type="search" placeholder="Password" aria-label="Search">
+            <input id="inputPass" class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
           </div>
 
           <div class="login-icon">
@@ -41,12 +47,16 @@
       </a>
       <form class="d-flex">
                                              <!-- ICONOS Y LOGIN -->
-          <div class="mail-icon">
-            <i class="far fa-envelope fa-2x"></i>
+          <div id="mail-icon">
+            <button class="betene btn1 hover"><i class="far fa-envelope"></i></button>
           </div>
 
-          <div class="wpp-icon">
-            <i class="fab fa-whatsapp fa-2x"></i>
+          <div id="linkedin-icon">
+            <button class="betene btn1 hover"><i class="fab fa-linkedin"></i></button>
+          </div>
+
+          <div id="wpp-icon">
+            <button class="betene btn1 hover"><i class="fab fa-whatsapp"></i></button>
           </div>
                 
           <h5 id="usuarioBienvenida">¡Bienvenido, Lautaro!</h5>
