--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,7 +1,7 @@
                                             <!-- ACERCA DE -->
 
      <div id="acerca-de" class="card border-dark mb-3" style="max-width: 80rem;">
-        <i id="edit" class="fas fa-pencil-alt"></i>
+        <button id="edit" class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
       <div id="acerca-de-text" class="card-body text-dark">
         <h4 class="card-title-acerca-de">Acerca de:</h4>
         <p class="card-text">{{acercadeInfo.description}}</p>
