--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,8 +1,15 @@
                                           <!-- EDUCACION -->
 
   <div id="educacion" class="card border-dark mb-3" style="max-width: 80rem;">
-    <i id="edit" class="fas fa-pencil-alt"></i>
-    <i id="plus" class="fas fa-plus"></i>
+    
+    <div id="edu-edit">
+      <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
+      </div>
+  
+      <div id="edu-plus">
+        <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+      </div>
+  
     <div id="educacion-text" class="card-body text-dark">
       <h4 class="card-title-education">Educación:</h4>
         <div>
