--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,28 +1,18 @@
-<div id="skills" class="card border-dark mb-3" style="max-width: 80rem;">
-    <h4 class="card-title-skills">Hard & Soft Skills:</h4>
+<div id="skills-box" class="card border-dark mb-3" style="max-width: 80rem;">
 
-<ul *ngFor="let skill of skillsInfo">
-  <li>
-    <div id="skills-data" >
-       
-      <div id="word-icon">
-        <i class="fas fa-file-word fa-3x"></i>
-      </div>
-  
-      <div id="skill-title">
-      <h5>{{ skill.nombre }}</h5>
-      </div>
-  
-    <div class="progress" style="height: 30px; width: 50%;">
-       <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">{{skill.valorText}}</div>
-    </div>
-
-    <br>
-    </div>
-
-  </li>
-</ul>
+<div class="chart-wrap"> <!-- quitar el estilo "horizontal" para visualizar verticalmente -->
+  <div class="title">Hard & Soft Skills:</div>
+ 
+  <div class="grid">
+    <ul *ngFor="let skill of skillsInfo">
+      <li>
+        <p id="name">{{skill.nombre}}</p>
+        <div class="bar" [style]=skill.valor [title]=skill.valorNum></div>
+      </li>
+      
+    </ul>
+  </div>
 </div>
-
+</div>
 
 
