--- a/src/styles.css
+++ b/src/styles.css
@@ -65,6 +65,14 @@
     position: relative;
 }
 
+#skills-box{
+    margin-left: auto;
+    margin-right: auto;
+    box-shadow: 0 0 3px 3px rgba(0, 0, 0, 4);
+    position: relative;
+
+}
+
 #acerca-de-text{
     font-family: "Poppins", sans-serif; 
 }
