--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 #usuarioBienvenida{
     font-family: 'Kaushan Script', cursive;
     font-size: 25px;
-    margin: 0px 20px 0px 5px;
+    margin: 0em 1.25em 0em 0.313em;
     text-align: center;
 }
 
@@ -9,10 +9,10 @@
     color: #0099CC;
     background: transparent;
     border: 2px solid #0099CC;
-    border-radius: 6px;
+    border-radius: 0.375em;
     border: none;
     color: white;
-    padding: 3px 10px;
+    padding: 0.188em 0.625em;
     text-align: center;
     display: inline-block;
     font-size: 16px;
