--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,19 +21,49 @@
             <button class="betene btn1 hover"><i class="fab fa-whatsapp"></i></button>
           </div>
 
-          <div class="imput-username">
-            <input id="inputUser" class="form-control me-2" type="text" placeholder="Username" aria-label="Search">
-          </div>
-          <div class="imput-password">
-            <input id="inputPass" class="form-control me-2" type="password" placeholder="Password" aria-label="Search">
-          </div>
 
-          <div class="login-icon">
-              <button (click)="loguearUsuario()" type="submit"class="btn btn-success">Login</button>
-          </div>
-      </form>
+                                               <!-- MODAL LOGIN -->
+
+           <!-- Botón que levanta el modal -->
+  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    Login
+  </button>
+
+          <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">ACCEDA A SU PORTFOLIO</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <br>   
+        <div>
+          <h6>Ingrese su nombre de Usuario:</h6>
+        </div>
+        <div class="imput-username">
+          <input id="inputUser" class="form-control me-2" type="text" placeholder="Nombre de Usuario" aria-label="Search">
+        </div>
+        <br>
+        <div>
+          <h6>Ingrese su contraseña:</h6>
+        </div>
+        <div class="imput-password">
+          <input id="inputPass" class="form-control me-2" type="password" placeholder="Contraseña" aria-label="Search">
+        </div>
+        <br>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button (click)="loguearUsuario()" type="button" class="btn btn-success">Login</button>
+      </div>
     </div>
-  </nav>
+  </div>
+</div>
+</form>
+</div>
+</nav>
 </div>
 
 
@@ -68,3 +98,6 @@
     </div>
   </nav>
 </div>
+
+
+
