--- a/src/styles.css
+++ b/src/styles.css
@@ -132,17 +132,17 @@
 
 #salud-icon{
     margin-top: 0.938em;
-    margin-right: 0.938e;
+    margin-right: 0.938em;
 }
 
 #argprog-icon{
     margin-top: 1.563em;
-    margin-right: 0.938e;
+    margin-right: 0.600em;
 }
 
 #school-icon{
     margin-right: 0.938em;
-
+    margin-top: 0.600em;
 }
 
 #skills{
