--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,9 +1,9 @@
                                             <!-- ACERCA DE -->
 
-     <div id="acerca-de" class="card border-dark mb-3" style="max-width: 80rem;">
+     <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" id="acerca-de" class="card border-dark mb-3 scrollspy-example" tabindex="0" style="max-width: 80rem;">
         <button id="edit" class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
       <div id="acerca-de-text" class="card-body text-dark">
-        <h4 class="card-title-acerca-de">Acerca de:</h4>
+        <h4 id="scrollspyHeadingAcercaDe" class="card-title-acerca-de">Acerca de:</h4>
         <p class="card-text">{{acercadeInfo.description}}</p>
       </div>
      </div>
