--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -11,7 +11,7 @@
       </div>
   
     <div id="educacion-text" class="card-body text-dark">
-      <h4 class="card-title-education">Educación:</h4>
+      <h4 id="scrollspyHeadingEdu" class="card-title-education">Educación:</h4>
         <div>
           <ul id="education-list" *ngFor="let item of educacionInfo">
             <li>
