--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,26 @@
 <div *ngIf="!usuarioLogueado">   <!-- NavBar de Usuario NO-LOGUEADO -->
                                              <!-- BARRA DE NAVEGACION -->
-<nav class="navbar navbar-light bg-light">
+<nav id="navbar-example2" class="navbar navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="https://i.ibb.co/8dWqNMH/argprog.jpg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
          Argentina Programa - #YoProgramo
       </a>
+
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a href="#scrollspyHeadingAcercaDe">Acerca de</a>
+        </li>
+        <li class="nav-item">
+          <a  href="#scrollspyHeadingEdu">Educación</a>
+        </li>
+        <li class="nav-item">
+          <a href="#scrollspyHeadingExp">Experiencia</a>
+        </li>
+        <li class="nav-item">
+          <a href="#scrollspyHeadingSkills">Skills</a>
+        </li>
+      </ul>
       <form class="d-flex">
                                              <!-- ICONOS Y LOGIN -->
 
