--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,7 +1,7 @@
 <div id="skills-box" class="card border-dark mb-3" style="max-width: 80rem;">
 
 <div class="chart-wrap"> <!-- quitar el estilo "horizontal" para visualizar verticalmente -->
-  <div class="title">Hard & Soft Skills:</div>
+  <div id="scrollspyHeadingSkills" class="title">Hard & Soft Skills:</div>
  
   <div class="grid">
     <ul *ngFor="let skill of skillsInfo">
