arregle el modal que no se iba el blur al loguear

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -39,39 +39,25 @@
 
                                                <!-- MODAL LOGIN -->
 
-           <!-- Botón que levanta el modal -->
-  <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-    Login
-  </button>
+<!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
 
-          <!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">ACCEDA A SU PORTFOLIO</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <br>   
-        <div>
-          <h6>Ingrese su nombre de Usuario:</h6>
-        </div>
-        <div class="imput-username">
-          <input id="inputUser" class="form-control me-2" type="text" placeholder="Nombre de Usuario" aria-label="Search">
-        </div>
-        <br>
-        <div>
-          <h6>Ingrese su contraseña:</h6>
-        </div>
-        <div class="imput-password">
-          <input id="inputPass" class="form-control me-2" type="password" placeholder="Contraseña" aria-label="Search">
-        </div>
-        <br>
+        ...
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button (click)="loguearUsuario()" type="button" class="btn btn-success">Login</button>
+        <button (click)="loguearUsuario()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
