--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="!usuarioLogueado">   <!-- NavBar de Usuario NO-LOGUEADO -->
+
                                              <!-- BARRA DE NAVEGACION -->
 <nav id="navbar-example2" class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -6,6 +7,8 @@
         <img src="https://i.ibb.co/8dWqNMH/argprog.jpg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
          Argentina Programa - #YoProgramo
       </a>
+
+                <!-- Navegador de secciones -->
 
       <ul class="nav nav-pills">
         <li class="nav-item">
@@ -21,54 +24,68 @@
           <a href="#scrollspyHeadingSkills">Skills</a>
         </li>
       </ul>
-      <form class="d-flex">
-                                             <!-- ICONOS Y LOGIN -->
+    <form class="d-flex">
 
-          <div id="mail-icon">
-            <button class="betene btn1 hover"><i class="far fa-envelope"></i></button>
-          </div>
+                <!-- ICONOS REDES SOCIALES-->
 
-          <div id="linkedin-icon">
-            <button class="betene btn1 hover"><i class="fab fa-linkedin"></i></button>
-          </div>
+              <div id="mail-icon">
+                <button class="betene btn1 hover"><i class="far fa-envelope"></i></button>
+              </div>
 
-          <div id="wpp-icon">
-            <button class="betene btn1 hover"><i class="fab fa-whatsapp"></i></button>
-          </div>
+             <div id="linkedin-icon">
+               <button class="betene btn1 hover"><i class="fab fa-linkedin"></i></button>
+             </div>
+
+             <div id="wpp-icon">
+               <button class="betene btn1 hover"><i class="fab fa-whatsapp"></i></button>
+             </div>
 
 
-                                               <!-- MODAL LOGIN -->
+                                               <!-- MODAL -->
 
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button>
+                  <!-- Button trigger modal -->
+            <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
 
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button (click)="loguearUsuario()" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
-      </div>
+                  <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                   <div class="modal-header">
+                      <h3 class="modal-title" id="exampleModalLabel">Iniciar Sesión</h3>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                   </div>
+                <div class="modal-body">     <!-- Cuerpo dentro del modal -->
+                  <h5 class="modal-title" id="exampleModalLabel">Ingrese su usuario:</h5>
+
+                    <div class="input-group">
+                      <span class="input-group-text" id="basic-addon1">Usuario</span>
+                      <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                    </div>
+                    <br>
+                <h5 class="modal-title" id="exampleModalLabel">Ingrese su contraseña:</h5>
+
+                  <div class="input-group">
+                    <span class="input-group-text" id="basic-addon1">Contraseña</span>
+                    <input type="password" class="form-control" aria-label="Username" aria-describedby="basic-addon1">
+                  </div>
+
+                </div>
+
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button (click)="loguearUsuario()" type="button" class="btn btn-success" data-bs-dismiss="modal">Login</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+      </form>
     </div>
-  </div>
-</div>
-</form>
-</div>
-</nav>
+  </nav>
 </div>
 
 
 <div *ngIf="usuarioLogueado">   <!-- NavBar de Usuario LOGUEADO -->
+
                                              <!-- BARRA DE NAVEGACION -->
 <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
@@ -76,8 +93,27 @@
         <img src="https://i.ibb.co/8dWqNMH/argprog.jpg" alt="logo" width="30" height="24" class="d-inline-block align-text-top">
          Argentina Programa - #YoProgramo
       </a>
+      
+                <!-- Navegador de secciones -->
+      <ul class="nav nav-pills">
+        <li class="nav-item">
+          <a href="#scrollspyHeadingAcercaDe">Acerca de</a>
+        </li>
+        <li class="nav-item">
+          <a  href="#scrollspyHeadingEdu">Educación</a>
+        </li>
+        <li class="nav-item">
+          <a href="#scrollspyHeadingExp">Experiencia</a>
+        </li>
+        <li class="nav-item">
+          <a href="#scrollspyHeadingSkills">Skills</a>
+        </li>
+      </ul>
+
       <form class="d-flex">
-                                             <!-- ICONOS Y LOGIN -->
+
+                     <!-- ICONOS Y LOGIN -->
+
           <div id="mail-icon">
             <button class="betene btn1 hover"><i class="far fa-envelope"></i></button>
           </div>
