--- a/src/styles.css
+++ b/src/styles.css
@@ -73,13 +73,13 @@
     position: relative;
 }
 
-#skills-box{
+#skills{
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 4);
     position: relative;
-
 }
+
 
 #acerca-de-text{
     font-family: "Poppins", sans-serif; 
@@ -157,17 +157,8 @@
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 4);
 }
 
-#skills-data{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background-color: #E2E2E2;
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 5px;
-}
 
-.card-title-skills{
+.title-skills{
     font-size: 30px;
     font-family: "Poppins", sans-serif;
     margin-left: 20px;
@@ -184,13 +175,4 @@
     border-radius: 5px;
 }
 
-#skill-title{
-    font-family: "Poppins", sans-serif;
-    width: 145px;
-    margin-left: 30px;
-    margin-right: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
