styles y grafico barras

--- a/src/app/components/acerca-de/acerca-de.component.css
+++ b/src/app/components/acerca-de/acerca-de.component.css
@@ -27,7 +27,9 @@
 }
 
 .card-text{
-    padding-left: 170px;
-    padding-right: 50px;
     font-size: larger;
+    display: flex;
+    align-content: center;
+    justify-content: space-evenly;
+    align-items: center;
 }
