--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -11,7 +11,7 @@
     </div>
   
     <div id="exp-text" class="card-body text-dark">
-      <h4 id="scrollspyHeadingExp" class="card-title-education">Experiencia:</h4>
+      <h4 id="scrollspyHeadingExp" class="card-title-title">Experiencia:</h4>
         <div>
           <ul id="education-list" *ngFor="let item of experienciaInfo">
             <li>
