--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,8 +1,10 @@
-<div id="skills" class="card border-dark mb-3" style="max-width: 80rem;">
+<div id="skills" class="card border-dark mb-3 contiene-progres" style="max-width: 80rem;">
     <h4 id="scrollspyHeadingSkills" class="title-skills">Hard & Soft Skills:</h4>
 
-    <app-item-skills></app-item-skills>
+        <app-item-skills></app-item-skills>
+
 </div>
+
 
 
 
