--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -1,6 +1,15 @@
 <div id="skills" class="card border-dark mb-3 contiene-progres" style="max-width: 80rem;">
     <h4 id="scrollspyHeadingSkills" class="title-skills">Hard & Soft Skills:</h4>
 
+    <div id="exp-edit">
+        <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
+        </div>
+    
+        <div id="exp-plus">
+          <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+        </div>
+    
+
         <app-item-skills></app-item-skills>
 
 </div>
