--- a/src/styles.css
+++ b/src/styles.css
@@ -165,6 +165,7 @@
     font-family: "Poppins", sans-serif;
     margin-left: 20px;
     margin-top: 18px;
+    margin-bottom: 20px;
     font-size: 1.875em;
     display: flex;
     align-content: center;
