--- a/src/app/components/acerca-de/acerca-de.component.html
+++ b/src/app/components/acerca-de/acerca-de.component.html
@@ -1,7 +1,7 @@
                                             <!-- ACERCA DE -->
 
      <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" id="acerca-de" class="card border-dark mb-3 scrollspy-example" tabindex="0" style="max-width: 80rem;">
-        <button id="edit" class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
+        <button id="edit" *ngIf="AuthService.usuarioLogueado" class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
       <div id="acerca-de-text" class="card-body text-dark">
         <h4 id="scrollspyHeadingAcercaDe" class="card-title-title">Acerca de:</h4>
         <p class="card-text">{{acercadeInfo.description}}</p>
