--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -1,33 +1,4 @@
-                                          <!-- EDUCACION -->
-
-  <div id="educacion" class="card border-dark mb-3" style="max-width: 80rem;">
-    
-    <div id="edu-edit" *ngIf="AuthService.usuarioLogueado">
-      <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
-      </div>
-  
-      <div id="edu-plus" *ngIf="AuthService.usuarioLogueado">
-        <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
-      </div>
-  
-    <div id="educacion-text" class="card-body text-dark">
-      <h4 id="scrollspyHeadingEdu" class="card-title-title">Educación:</h4>
-        <div>
-          <ul id="education-list" *ngFor="let item of educacionInfo">
-            <li>
-                <img [src]="item.img" id="school-icon" class="rounded float-start" alt="img" width="75px" height="75px">
-                <div class="list-group">
-                  <div class="d-flex w-100 justify-content-between">
-                    <small class="text-muted">{{item.time}}</small>
-                  </div>
-                  <p class="mb-1">{{item.title}}</p>
-                  <small class="text-muted">{{item.description}}</small>
-                </div>
-            </li>
-          </ul>
-        </div>
-    </div>
-  </div>
+<app-item-educacion></app-item-educacion>
 
 
   
