terminado json server

--- a/src/app/components/item-educacion/item-educacion.component.html
+++ b/src/app/components/item-educacion/item-educacion.component.html
@@ -17,7 +17,7 @@
             <li>
 
               <div id="edu-delete">
-                <button class="betene btn1 hover"><fa-icon [icon]="faTimes" [ngStyle]="{'color': 'red'}" (click)="onDelete(educacion)"></fa-icon></button>
+                <button class="betene btn1 hover"><fa-icon [icon]="faTimes" [ngStyle]="{'color': 'red'}"></fa-icon></button>
               </div>   
                    
                 <img [src]="item.img" id="school-icon" class="rounded float-start" alt="img" width="75px" height="75px">
