--- a/src/app/components/experiencia/experiencia.component.html
+++ b/src/app/components/experiencia/experiencia.component.html
@@ -1,29 +1,36 @@
-                                             <!-- EXPERIENCIA -->
+<!-- EXPERIENCIA -->
 
-  <div id="experiencia" class="card border-dark mb-3" style="max-width: 80rem;">
-    
-    <div id="exp-edit">
+<div id="experiencia" class="card border-dark mb-3" style="max-width: 80rem">
+  <div id="exp-edit">
     <button class="betene btn1 hover"><i class="fas fa-pencil-alt"></i></button>
-    </div>
+  </div>
 
-    <div id="exp-plus">
-      <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+  <div id="exp-plus">
+    <button class="betene btn1 hover"><i class="fas fa-plus"></i></button>
+  </div>
+
+  <div id="exp-text" class="card-body text-dark">
+    <h4 id="scrollspyHeadingExp" class="card-title-title">Experiencia:</h4>
+    <div>
+      <ul id="education-list" *ngFor="let item of experienciaInfo">
+        <li>
+          <img
+            [src]="item.img"
+            id="salud-icon"
+            class="rounded float-start"
+            alt="school"
+            width="70px"
+            height="70px"
+          />
+          <div class="list-group">
+            <div class="d-flex w-100 justify-content-between">
+              <small class="text-muted">{{ item.time }}</small>
+            </div>
+            <p class="mb-1">{{ item.title }}</p>
+            <small class="text-muted">{{ item.description }}</small>
+          </div>
+        </li>
+      </ul>
     </div>
-  
-    <div id="exp-text" class="card-body text-dark">
-      <h4 id="scrollspyHeadingExp" class="card-title-title">Experiencia:</h4>
-        <div>
-          <ul id="education-list" *ngFor="let item of experienciaInfo">
-            <li>
-                <img [src]="item.img" id="salud-icon" class="rounded float-start" alt="school" width="70px" height="70px">
-                <div class="list-group">
-                  <div class="d-flex w-100 justify-content-between">
-                    <small class="text-muted">{{item.time}}</small>
-                  </div>
-                  <p class="mb-1">{{item.title}}</p>
-                  <small class="text-muted">{{item.description}}</small>
-                </div>
-         </ul>
-       </div>
-    </div>   
-  </div> 
+  </div>
+</div>
