--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,19 +1,28 @@
 <div>
-                                            <!-- ENCABEZADO -->
-<header>
-                                             <!-- PERFIL -->
+  <!-- ENCABEZADO -->
+  <header>
+    <!-- PERFIL -->
     <div id="contenedor-todo-header">
       <div>
-        <img [src]="headerInfo.profile" id="profile" class="rounded float-start" alt="img de perfil">
-      </div> 
-                                        <!-- NOMBRE Y TITULO -->
-    <div id="contenedor-nombre-titulo">
-      <h2 id="nombre">{{ headerInfo.nombre }}</h2>
-      <h3 id="titulo">{{ headerInfo.titulo }}</h3>
+        <img
+          [src]="headerInfo.profile"
+          id="profile"
+          class="rounded float-start"
+          alt="img de perfil"
+        />
+      </div>
+      <!-- NOMBRE Y TITULO -->
+      <div id="contenedor-nombre-titulo">
+        <h2 id="nombre">{{ headerInfo.nombre }}</h2>
+        <h3 id="titulo">{{ headerInfo.titulo }}</h3>
+      </div>
+      <!-- HEADER AZUL -->
+      <img
+        [src]="headerInfo.banner"
+        id="blue-banner"
+        class="img-fluid"
+        alt="este es el banner"
+      />
     </div>
-                                         <!-- HEADER AZUL -->
-      <img [src]="headerInfo.banner" id="blue-banner" class="img-fluid" alt="este es el banner">
-    </div>
-</header>
-
+  </header>
 </div>
