--- a/src/app/components/item-skills/item-skills.component.html
+++ b/src/app/components/item-skills/item-skills.component.html
@@ -1,23 +1,18 @@
-<div id="skill-item-card" >
-<circle-progress
-*ngFor="let skill of skillsInfo"
-
-
-  [radius]="90"
-  [outerStrokeWidth]="15"
-  [innerStrokeWidth]="10"
-  [innerStrokeColor]="'##e7e8ea'"
-  [animation]="true"
-  [showTitle]="true"
-  [responsive]="false"
-  [animationDuration]="1000"
-  [subtitleFontSize]="'20'"
-
-  [percent]= skill.title
-  [title]="skill.title"
-  [subtitle]="skill.subtitle"
-  [outerStrokeColor]="skill.outerStrokeColor"
-
-  
-></circle-progress>
+<div id="skill-item-card">
+  <circle-progress
+    *ngFor="let skill of skillsInfo"
+    [radius]="90"
+    [outerStrokeWidth]="15"
+    [innerStrokeWidth]="10"
+    [innerStrokeColor]="'##e7e8ea'"
+    [animation]="true"
+    [showTitle]="true"
+    [responsive]="false"
+    [animationDuration]="1000"
+    [subtitleFontSize]="'20'"
+    [percent]="skill.title"
+    [title]="skill.title"
+    [subtitle]="skill.subtitle"
+    [outerStrokeColor]="skill.outerStrokeColor"
+  ></circle-progress>
 </div>
